--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 
 # Ignore Gradle build output directory
 build
-.txt
+app/src/main/java/MythicalMoney/Token.txt
+app/src/main/java/MythicalMoney/Token.txt
 app/src/main/java/MythicalMoney/Token.txt
