--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 # Ignore Gradle build output directory
 build
 app/src/main/java/MythicalMoney/Token.txt
-app/src/main/java/MythicalMoney/Token.txt
-app/src/main/java/MythicalMoney/Token.txt
+*.py
+*.txt
